# lab06

./: CMakeLists.txt  README.md
.github/workflows/: Archive.yml  build.yml
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeList.txt  CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt  hello_world.cpp
hello_world_application/_build/: CMakeCache.txt  Hello  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt  equation.cpp
solver_application/_build/: CMakeCache.txt  Makefile  Solver  cmake_install.cmake
solver_lib/: CMakeLists.txt  solver.cpp
